--- a/source_code/my-client/src/styles.css
+++ b/source_code/my-client/src/styles.css
@@ -110,7 +110,18 @@ ul.navbar {
 		justify-content: flex-end;
 	}
 	.login {
-		padding-top: 20px;
+		padding-top: 2
+		0px;
+	}
+	.titleStyle {
+		font-size: 3rem;
+	}
+	.sloganStyle {
+		font-size: 20px;
+	}
+	.box-icon {
+		margin-right: 20px;
+		width: 90px;
 	}
   }
 
@@ -119,9 +130,43 @@ ul.navbar {
 	.navbar-container {
 		justify-content: space-around;
 	}
+	.navbar {
+		width: 90%;
+	}
 	.login {
 		padding-top: 30%;
 	}
+	.borderSectionStyle {
+		flex-direction: column;
+	}
+	.titleStyle {
+		font-size: 2rem;
+	}
+	.sloganStyle {
+		font-size: 13px;
+	}
+	.box-icon {
+		margin-right: 20px;
+		width: 60px;
+	}
+  }
+  
+
+  /* Both laptop and mobile get this general style */
+  .box-icon {
+	position: relative;
+	bottom: -20px;
+
+  }
+
+  .sloganStyle {
+	color: gray;
+	margin-bottom: 20px;
+  }
+
+  .borderSectionStyle {
+	display: flex;
+	padding: 20px;
   }
 
   .login {
@@ -129,6 +174,11 @@ ul.navbar {
 	align-items: center;
 	flex-direction: column;
 
+  }
+
+  .titleStyle {
+	margin-bottom: 10px;
+	color: rgb(92, 119, 226)
   }
 
 
@@ -162,4 +212,20 @@ input:-webkit-autofill {
 	border-bottom: 1px solid #007bff;
   }
 
+  /* Fade in info sections */
 
+  @keyframes fadeIn {
+	from {
+	  opacity: 0;
+	  transform: translateX(-20px);
+	}
+	to {
+	  opacity: 1;
+	  transform: translateX(0);
+	}
+  }
+  
+  .fadeIn {
+	animation: fadeIn 0.5s ease-in-out;
+  }
+  
